--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<meta name="theme-color" content="#7295cd">
 	
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css?v=340">
+  <link rel="stylesheet" href="css/style.css?v=357">
   <meta name="theme-color" content="#7295cd">
 </head>
 <body>
@@ -93,48 +93,82 @@
 		<!--</div>-->
 		<div class="projects grid grid-4">
 			<div class="project" id="pukeko" data-langs="php mysql js py">
-				<a href="https://pukeko.yiays.com/" target="_blank">
+				<a class="poster" href="https://pukeko.yiays.com/" target="_blank">
 					<span>pukeko</span>
-					<p>A new kind of paid game server hosting platform that encourages members of a discord server to pay for hosting when they're playing.</p>
+					<p>
+						<img alt="database" src="/img/oct/database.svg"><img alt="desktop" src="/img/oct/device-desktop.svg"><img alt="mobile" src="/img/oct/device-mobile.svg"><br>
+						A new kind of paid game server hosting platform that encourages members of a discord server to pay for hosting when they're playing.
+					</p>
 					<h3>Pukeko<span class="dim">Host</span></h3>
+				</a>
+				<a class="github" href="https://github.com/Pukeko-Host/" target="_blank" title="View on GitHub">
+					<img alt="github" src="/img/oct/mark-github.svg"/>
 				</a>
 			</div>
 			<div class="project" id="meme" data-langs="php mysql js">
-				<a href="https://meme.yiays.com/" target="_blank">
+				<a class="poster" href="https://meme.yiays.com/" target="_blank">
 					<span>meme</span>
-					<p>A massive database of memes with crowd-sourced metadata, making for one of the best places to search for memes by describing them!</p>
+					<p>
+						<img alt="database" src="/img/oct/database.svg"><img alt="desktop" src="/img/oct/device-desktop.svg"><img alt="mobile" src="/img/oct/device-mobile.svg"><img alt="discord" src="/img/discord.svg"><br>
+						A massive database of memes with crowd-sourced metadata, making for one of the best places to search for memes by describing them!
+					</p>
 					<h3>Meme<span style="color:#f9ca24;">DB</span></h3>
+				</a>
+				<a class="github" href="https://github.com/TeamMemeDB/" target="_blank" title="View on GitHub">
+					<img alt="github" src="/img/oct/mark-github.svg"/>
 				</a>
 			</div>
 			<div class="project" id="merely" data-langs="py mysql js">
-				<a href="https://merely.yiays.com/" target="_blank">
+				<a class="poster" href="https://merely.yiays.com/" target="_blank">
 					<span>m/</span>
-					<p>a generally helpful discord bot with google search, image search, memes from MemeDB and a website!</p>
+					<p>
+						<img alt="discord" src="/img/discord.svg"><img alt="desktop" src="/img/oct/device-desktop.svg"><img alt="mobile" src="/img/oct/device-mobile.svg"><br>
+						a generally helpful discord bot with google search, image search, memes from MemeDB and a website!
+					</p>
 					<h3>merely</h3>
+				</a>
+				<a class="github" href="https://github.com/yiays/merely" target="_blank" title="View on GitHub">
+					<img alt="github" src="/img/oct/mark-github.svg"/>
 				</a>
 			</div>
 			<div class="project" id="kahoot" data-langs="py js cs">
-				<a href="https://github.com/yesiateyoursheep/noncopyrightedinternetquizgamename" target="_blank">
+				<a class="poster" href="https://github.com/yiays/noncopyrightedinternetquizgamename" target="_blank">
 					<span>k!</span>
 					<p>
+						<img alt="discord" src="/img/discord.svg"><img alt="desktop" src="/img/oct/device-desktop.svg"><img alt="mobile" src="/img/oct/device-mobile.svg"><br>
 						kahoot clone but in discord
 						<br>currently being rewritten in CSharp
 					</p>
 					<h3><i>KahootDiscord</i></h3>
 				</a>
+				<a class="github" href="https://github.com/yiays/noncopyrightedinternetquizgamename" target="_blank" title="View on GitHub">
+					<img alt="github" src="/img/oct/mark-github.svg"/>
+				</a>
 			</div>
 			<div class="project" id="dino" data-langs="cs mysql php">
-				<a href="https://github.com/yesiateyoursheep/dino" target="_blank">
+				<a class="poster" href="https://github.com/yiays/dino/releases" target="_blank">
 					<span>dino</span>
-					<p>The game that appears in Chrome when there's no internet, rewritten in unity3D with additional features, like a global leaderboard!</p>
+					<p>
+						<img alt="desktop" src="/img/oct/device-desktop.svg"><img alt="mobile" src="/img/oct/device-mobile.svg"><br>
+						The game that appears in Chrome when there's no internet, rewritten in unity3D with additional features, like a global leaderboard!
+					</p>
 					<h3>Dino</h3>
+				</a>
+				<a class="github" href="https://github.com/yiays/dino" target="_blank" title="View on GitHub">
+					<img alt="github" src="/img/oct/mark-github.svg"/>
 				</a>
 			</div>
 			<div class="project" id="signage" data-langs="js mysql">
-				<a href="https://signage.yiays.com/" target="_blank">
+				<a class="poster" href="https://signage.yiays.com/" target="_blank">
 					<span>signs</span>
-					<p>Dynamicly updating content as signage designed for a tablet. One of my first projects written in React. Considerations were taken to prevent screen burn in.</p>
+					<p>
+						<img alt="desktop" src="/img/oct/device-desktop.svg"><br>
+						Dynamicly updating content as signage designed for a tablet. One of my first projects written in React. Considerations were taken to prevent screen burn in.
+					</p>
 					<h3>Signage</h3>
+				</a>
+				<a class="github" href="https://github.com/yiays/signage" target="_blank" title="View on GitHub">
+					<img alt="github" src="/img/oct/mark-github.svg"/>
 				</a>
 			</div>
 			<!--
@@ -144,13 +178,16 @@
 				TF2D
 			-->
 			<div class="project" id="blog" data-langs="php mysql js">
-				<a href="https://blog.yiays.com/" target="_blank">
+				<a class="poster" href="https://blog.yiays.com/" target="_blank">
 					<span>blog</span>
-					<p>A blog engine written from scratch, I use it to write about my projects and create pages for smaller projects that don't have their own website.</p>
+					<p>
+						<img alt="database" src="/img/oct/database.svg"><img alt="desktop" src="/img/oct/device-desktop.svg"><img alt="mobile" src="/img/oct/device-mobile.svg"><br>
+						A blog engine written from scratch, I use it to write about my projects and create pages for smaller projects that don't have their own website.
+					</p>
 					<h3>Project Blog</h3>
 				</a>
 			</div>
-			<a href="." class="rounded-button fixed fixed-bottom fixed-right hide" id="refresh-projects">&#x21bb;</a>
+			<a href="." class="rounded-button fixed fixed-bottom fixed-right hide" id="refresh-projects"><img alt="refresh" src="/img/oct/sync.svg"></a>
 		</div>
 	</section>
 	<hr/>
@@ -179,6 +216,6 @@
 		<p>&copy; 2020 Yiays</p>
 	</footer>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="/js/www.js?v=50"></script>
+	<script src="/js/www.js?v=63"></script>
 </body>
 </html>
