--- a/index.html
+++ b/index.html
@@ -167,6 +167,19 @@
 									<img alt="github" src="/img/oct/mark-github.svg"/>
 								</a>
 							</div>
+							<div class="project loading" id="wipeout" data-langs="js">
+								<a class="poster" href="https://wipeout.yiays.com/" target="_blank">
+									<span>wipeout</span>
+									<p>
+										<img alt="desktop" src="/img/oct/device-desktop.svg"><img alt="mobile" src="/img/oct/device-mobile.svg"><br>
+										Fan sign design concept for the WipEout franchise. Featuring a video background, and JQuery-powered navigation.
+									</p>
+									<h3>WipEout</h3>
+								</a>
+								<a class="github" href="https://github.com/yiays/design/tree/assessment-2" target="_blank" title="View on GitHub">
+									<img alt="github" src="/img/oct/mark-github.svg"/>
+								</a>
+							</div>
 							<div class="project loading" id="signage" data-langs="js mysql">
 								<a class="poster" href="https://signage.yiays.com/" target="_blank">
 									<span>signs</span>
@@ -191,9 +204,12 @@
 									<span>blog</span>
 									<p>
 										<img alt="database" src="/img/oct/database.svg"><img alt="desktop" src="/img/oct/device-desktop.svg"><img alt="mobile" src="/img/oct/device-mobile.svg"><br>
-										A blog engine written from scratch, I use it to write about my projects and create pages for smaller projects that don't have their own website.
+										Find more smaller projects here, in my blog engine written from scratch. Featuring a solid css grids design.
 									</p>
 									<h3>Project Blog</h3>
+									<a class="github" href="https://github.com/yiays/blog" target="_blank" title="View on GitHub">
+										<img alt="github" src="/img/oct/mark-github.svg"/>
+									</a>
 								</a>
 							</div>
 						</div>
