--- a/index.html
+++ b/index.html
@@ -8,22 +8,10 @@
 		<meta name="keywords" content="yiays, yesiateyoursheep, web developer, programmer, database, designer, merely, kahootdiscord, pukekohost, project">
 		<meta name="description" content="I'm a student experienced with full-stack web development, software development, database design and implementation. Here you can find my work.">
 		
-		<link rel="apple-touch-icon" sizes="57x57" href="/icon/apple-icon-57x57.png">
-		<link rel="apple-touch-icon" sizes="60x60" href="/icon/apple-icon-60x60.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="/icon/apple-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="76x76" href="/icon/apple-icon-76x76.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="/icon/apple-icon-114x114.png">
-		<link rel="apple-touch-icon" sizes="120x120" href="/icon/apple-icon-120x120.png">
-		<link rel="apple-touch-icon" sizes="144x144" href="/icon/apple-icon-144x144.png">
-		<link rel="apple-touch-icon" sizes="152x152" href="/icon/apple-icon-152x152.png">
-		<link rel="apple-touch-icon" sizes="180x180" href="/icon/apple-icon-180x180.png">
-		<link rel="icon" type="image/png" sizes="192x192"  href="/icon/android-icon-192x192.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="/icon/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="96x96" href="/icon/favicon-96x96.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="/icon/favicon-16x16.png">
-		<link rel="manifest" href="/manifest.json">
-		<meta name="msapplication-TileColor" content="#7295cd">
-		<meta name="msapplication-TileImage" content="/icon/ms-icon-144x144.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
+		<link rel="manifest" href="/site.webmanifest">
 		<meta name="theme-color" content="#7295cd">
 		
 		<link rel="stylesheet" href="/normalize.css">
