Added project wipeout background Also fixed typo.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta name="theme-color" content="#7295cd">
 		
 		<link rel="stylesheet" href="/normalize.css">
-		<link rel="stylesheet" href="/style.css?v=1">
+		<link rel="stylesheet" href="/style.css?v=2">
 	</head>
 	<body>
 		<div class="background gradient-1">
@@ -160,7 +160,7 @@
 									<span>wipeout</span>
 									<p>
 										<img alt="desktop" src="/img/oct/device-desktop.svg"><img alt="mobile" src="/img/oct/device-mobile.svg"><br>
-										Fan sign design concept for the WipEout franchise. Featuring a video background, and JQuery-powered navigation.
+										Fan site design concept for the WipEout franchise. Featuring a video background, and JQuery-powered navigation.
 									</p>
 									<h3>WipEout</h3>
 								</a>
