Fix HTML validation issues and favicons

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 		<meta name="keywords" content="yiays, yesiateyoursheep, web developer, programmer, database, designer, merely, kahootdiscord, pukekohost, project">
 		<meta name="description" content="I'm a student experienced with full-stack web development, software development, database design and implementation. Here you can find my work.">
 		
-		<link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="/icon/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/icon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/icon/favicon-16x16.png">
 		<link rel="manifest" href="/site.webmanifest">
 		<meta name="theme-color" content="#7295cd">
 		
@@ -25,9 +25,9 @@
 			<div class="floaty">
 				<span class="floaty-hint">Click on the image to continue...</span>
 				<div class="bubble">
-					<img class="pfp" src="/img/pfp.jpg">
+					<img class="pfp" src="/img/pfp.jpg" alt="[Yiays] profile picture">
 				</div>
-				<section class="card container">
+				<div class="card container">
 					<article id="main" class="cardpage">
 						<div class="card-header c-grey-bg">
 							<h2>About me</h2>
@@ -195,19 +195,19 @@
 										Find more smaller projects here, in my blog engine written from scratch. Featuring a solid css grids design.
 									</p>
 									<h3>Project Blog</h3>
-									<a class="github" href="https://github.com/yiays/blog" target="_blank" title="View on GitHub">
-										<img alt="github" src="/img/oct/mark-github.svg"/>
-									</a>
+								</a>
+								<a class="github" href="https://github.com/yiays/blog" target="_blank" title="View on GitHub">
+									<img alt="github" src="/img/oct/mark-github.svg"/>
 								</a>
 							</div>
 						</div>
 					</article>
-				</section>
+				</div>
 			</div>
 		</div>
 		<footer>
 			Website made from scratch (and JQuery) by Yiays.
-			<img class="watermark" src="/img/watermark.png">
+			<img class="watermark" src="/img/watermark.png" alt="Sheep in square brackets (watermark form of Yiays.com logo)">
 			<span style="position: absolute; right: 2rem;">&copy; 2020 Yiays</span>
 		</footer>
 		
