Performance improvements for Google Lighthouse

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta name="theme-color" content="#7295cd">
 		
 		<link rel="stylesheet" href="normalize.css">
-		<link rel="stylesheet" href="style.css?v=3">
+		<link rel="stylesheet" href="style.css?v=4">
 	</head>
 	<body>
 		<div class="background gradient-1">
@@ -25,7 +25,7 @@
 			<div class="floaty">
 				<span class="floaty-hint">Click on the image to continue...</span>
 				<div class="bubble">
-					<img class="pfp" src="img/pfp.jpg" alt="[Yiays] profile picture">
+					<img class="pfp" src="img/pfp.jpg?v=2" alt="[Yiays] profile picture" width="1024" height="1024">
 				</div>
 				<div class="card container">
 					<article id="main" class="cardpage">
@@ -93,92 +93,92 @@
 								<a class="poster" href="https://pukeko.yiays.com/" target="_blank">
 									<span>pukeko</span>
 									<p>
-										<img alt="database" src="img/oct/database.svg"><img alt="desktop" src="img/oct/device-desktop.svg"><img alt="mobile" src="img/oct/device-mobile.svg"><br>
+										<img alt="database" src="img/oct/database.svg" width="16" height="16"><img alt="desktop" src="img/oct/device-desktop.svg" width="16" height="16"><img alt="mobile" src="img/oct/device-mobile.svg" width="16" height="16"><br>
 										A new kind of paid game server hosting platform that encourages members of a discord server to pay for hosting when they're playing.
 									</p>
 									<h3>Pukeko<span class="dim">Host</span></h3>
 								</a>
 								<a class="github" href="https://github.com/Pukeko-Host/" target="_blank" title="View on GitHub">
-									<img alt="github" src="img/oct/mark-github.svg"/>
+									<img alt="github" src="img/oct/mark-github.svg" width="48" height="48"/>
 								</a>
 							</div>
 							<div class="project loading" id="meme" data-langs="php mysql js">
 								<a class="poster" href="https://meme.yiays.com/" target="_blank">
 									<span>meme</span>
 									<p>
-										<img alt="database" src="img/oct/database.svg"><img alt="desktop" src="img/oct/device-desktop.svg"><img alt="mobile" src="img/oct/device-mobile.svg"><img alt="discord" src="img/discord.svg"><br>
+										<img alt="database" src="img/oct/database.svg" width="16" height="16"><img alt="desktop" src="img/oct/device-desktop.svg" width="16" height="16"><img alt="mobile" src="img/oct/device-mobile.svg" width="16" height="16"><img alt="discord" src="img/discord.svg" width="16" height="16"><br>
 										A massive database of memes with crowd-sourced metadata, making for one of the best places to search for memes by describing them!
 									</p>
 									<h3>Meme<span style="color:#f9ca24;">DB</span></h3>
 								</a>
 								<a class="github" href="https://github.com/TeamMemeDB/" target="_blank" title="View on GitHub">
-									<img alt="github" src="img/oct/mark-github.svg"/>
+									<img alt="github" src="img/oct/mark-github.svg" width="48" height="48"/>
 								</a>
 							</div>
 							<div class="project loading" id="merely" data-langs="py mysql js">
 								<a class="poster" href="https://merely.yiays.com/" target="_blank">
 									<span>m/</span>
 									<p>
-										<img alt="discord" src="img/discord.svg"><img alt="desktop" src="img/oct/device-desktop.svg"><img alt="mobile" src="img/oct/device-mobile.svg"><br>
+										<img alt="discord" src="img/discord.svg" width="16" height="16"><img alt="desktop" src="img/oct/device-desktop.svg" width="16" height="16"><img alt="mobile" src="img/oct/device-mobile.svg" width="16" height="16"><br>
 										a generally helpful discord bot with google search, image search, memes from MemeDB and a website!
 									</p>
 									<h3>merely</h3>
 								</a>
 								<a class="github" href="https://github.com/yiays/merely" target="_blank" title="View on GitHub">
-									<img alt="github" src="img/oct/mark-github.svg"/>
+									<img alt="github" src="img/oct/mark-github.svg" width="48" height="48"/>
 								</a>
 							</div>
 							<div class="project loading" id="kahoot" data-langs="py js cs">
 								<a class="poster" href="https://github.com/yiays/noncopyrightedinternetquizgamename" target="_blank">
 									<span>k!</span>
 									<p>
-										<img alt="discord" src="img/discord.svg"><img alt="desktop" src="img/oct/device-desktop.svg"><img alt="mobile" src="img/oct/device-mobile.svg"><br>
+										<img alt="discord" src="img/discord.svg" width="16" height="16"><img alt="desktop" src="img/oct/device-desktop.svg" width="16" height="16"><img alt="mobile" src="img/oct/device-mobile.svg" width="16" height="16"><br>
 										kahoot clone but in discord
 										<br>currently being rewritten in CSharp
 									</p>
 									<h3><i>KahootDiscord</i></h3>
 								</a>
 								<a class="github" href="https://github.com/yiays/noncopyrightedinternetquizgamename" target="_blank" title="View on GitHub">
-									<img alt="github" src="img/oct/mark-github.svg"/>
+									<img alt="github" src="img/oct/mark-github.svg" width="48" height="48"/>
 								</a>
 							</div>
 							<div class="project loading" id="dino" data-langs="cs mysql php">
 								<a class="poster" href="https://github.com/yiays/dino/releases" target="_blank">
 									<span>dino</span>
 									<p>
-										<img alt="desktop" src="img/oct/device-desktop.svg"><img alt="mobile" src="img/oct/device-mobile.svg"><br>
+										<img alt="desktop" src="img/oct/device-desktop.svg" width="16" height="16"><img alt="mobile" src="img/oct/device-mobile.svg" width="16" height="16"><br>
 										The game that appears in Chrome when there's no internet, rewritten in unity3D with additional features, like a global leaderboard!
 									</p>
 									<h3>Dino</h3>
 								</a>
 								<a class="github" href="https://github.com/yiays/dino" target="_blank" title="View on GitHub">
-									<img alt="github" src="img/oct/mark-github.svg"/>
+									<img alt="github" src="img/oct/mark-github.svg" width="48" height="48"/>
 								</a>
 							</div>
 							<div class="project loading" id="wipeout" data-langs="js">
 								<a class="poster" href="https://wipeout.yiays.com/" target="_blank">
 									<span>wipeout</span>
 									<p>
-										<img alt="desktop" src="img/oct/device-desktop.svg"><img alt="mobile" src="img/oct/device-mobile.svg"><br>
+										<img alt="desktop" src="img/oct/device-desktop.svg" width="16" height="16"><img alt="mobile" src="img/oct/device-mobile.svg" width="16" height="16"><br>
 										Fan site design concept for the WipEout franchise. Featuring a video background, and JQuery-powered navigation.
 									</p>
 									<h3>WipEout</h3>
 								</a>
 								<a class="github" href="https://github.com/yiays/design/tree/assessment-2" target="_blank" title="View on GitHub">
-									<img alt="github" src="img/oct/mark-github.svg"/>
+									<img alt="github" src="img/oct/mark-github.svg" width="48" height="48"/>
 								</a>
 							</div>
 							<div class="project loading" id="signage" data-langs="js mysql">
 								<a class="poster" href="https://signage.yiays.com/" target="_blank">
 									<span>signs</span>
 									<p>
-										<img alt="desktop" src="img/oct/device-desktop.svg"><br>
+										<img alt="desktop" src="img/oct/device-desktop.svg" width="16" height="16"><br>
 										Dynamicly updating content as signage designed for a tablet. One of my first projects written in React. Considerations were taken to prevent screen burn in.
 									</p>
 									<h3>Signage</h3>
 								</a>
 								<a class="github" href="https://github.com/yiays/signage" target="_blank" title="View on GitHub">
-									<img alt="github" src="img/oct/mark-github.svg"/>
+									<img alt="github" src="img/oct/mark-github.svg" width="48" height="48"/>
 								</a>
 							</div>
 							<!--
@@ -191,13 +191,13 @@
 								<a class="poster" href="https://blog.yiays.com/" target="_blank">
 									<span>blog</span>
 									<p>
-										<img alt="database" src="img/oct/database.svg"><img alt="desktop" src="img/oct/device-desktop.svg"><img alt="mobile" src="img/oct/device-mobile.svg"><br>
+										<img alt="database" src="img/oct/database.svg" width="16" height="16"><img alt="desktop" src="img/oct/device-desktop.svg" width="16" height="16"><img alt="mobile" src="img/oct/device-mobile.svg" width="16" height="16"><br>
 										Find more smaller projects here, in my blog engine written from scratch. Featuring a solid css grids design.
 									</p>
 									<h3>Project Blog</h3>
 								</a>
 								<a class="github" href="https://github.com/yiays/blog" target="_blank" title="View on GitHub">
-									<img alt="github" src="img/oct/mark-github.svg"/>
+									<img alt="github" src="img/oct/mark-github.svg" width="48" height="48"/>
 								</a>
 							</div>
 						</div>
@@ -207,11 +207,14 @@
 		</div>
 		<footer>
 			Website made from scratch (and JQuery) by Yiays.
-			<img class="watermark" src="img/watermark.png" alt="Sheep in square brackets (watermark form of Yiays.com logo)">
+			<img class="watermark" src="img/watermark.png" width="500" height="500" alt="Sheep in square brackets (watermark form of Yiays.com logo)">
 			<span style="position: absolute; right: 2rem;">&copy; 2020 Yiays</span>
 		</footer>
 		
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-		<script src="main.js?v=23"></script>
+		<script src="//cdn.yiays.com/jquery-3.6.0.min.js"></script>
+		<script src="main.js?v=24"></script>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,400i,900,900i&display=swap">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap">
 	</body>
 </html>
