Updated portfolio  + ConfessionBot  - KahootDiscord  - Signage Also tweaked the categorization of some projects

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta name="theme-color" content="#7295cd">
 		
 		<link rel="stylesheet" href="normalize.css">
-		<link rel="stylesheet" href="style.css?v=4">
+		<link rel="stylesheet" href="style.css?v=5">
 	</head>
 	<body>
 		<div class="background gradient-1">
@@ -89,6 +89,45 @@
 							</nav>
 						</div>
 						<div class="card-content projects">
+							<div class="project loading" id="meme" data-langs="php mysql js">
+								<a class="poster" href="https://meme.yiays.com/" target="_blank">
+									<span>meme</span>
+									<p>
+										<img alt="database" src="img/oct/database.svg" width="16" height="16"><img alt="discord" src="img/discord.svg" width="16" height="16"><img alt="desktop" src="img/oct/device-desktop.svg" width="16" height="16"><img alt="mobile" src="img/oct/device-mobile.svg" width="16" height="16"><br>
+										A massive database of memes with crowd-sourced metadata, making for one of the best places to search for memes by describing them!
+									</p>
+									<h3>Meme<span style="color:#f9ca24;">DB</span></h3>
+								</a>
+								<a class="github" href="https://github.com/TeamMemeDB/" target="_blank" title="View on GitHub">
+									<img alt="github" src="img/oct/mark-github.svg" width="48" height="48"/>
+								</a>
+							</div>
+							<div class="project loading" id="merely" data-langs="py js">
+								<a class="poster" href="https://merely.yiays.com/" target="_blank">
+									<span>m/</span>
+									<p>
+										<img alt="discord" src="img/discord.svg" width="16" height="16"><img alt="desktop" src="img/oct/device-desktop.svg" width="16" height="16"><img alt="mobile" src="img/oct/device-mobile.svg" width="16" height="16"><br>
+										a generally helpful discord bot with google search, image search, memes from MemeDB and a website!
+									</p>
+									<h3>merely</h3>
+								</a>
+								<a class="github" href="https://github.com/yiays/merely" target="_blank" title="View on GitHub">
+									<img alt="github" src="img/oct/mark-github.svg" width="48" height="48"/>
+								</a>
+							</div>
+							<div class="project loading" id="cb" data-langs="py">
+								<a class="poster" href="https://l.yiays.com/confessionbot" target="_blank">
+									<span>signs</span>
+									<p>
+										<img alt="desktop" src="img/discord.svg" width="16" height="16"><br>
+										An anonymous messaging bot for Discord, used by thousands of Discord servers and translated by passionate users.
+									</p>
+									<h3>ConfessionBot</h3>
+								</a>
+								<a class="github" href="https://github.com/yiays/Translate-Confessionbot" target="_blank" title="View on GitHub">
+									<img alt="github" src="img/oct/mark-github.svg" width="48" height="48"/>
+								</a>
+							</div>
 							<div class="project loading" id="pukeko" data-langs="php mysql js py">
 								<a class="poster" href="https://pukeko.yiays.com/" target="_blank">
 									<span>pukeko</span>
@@ -102,33 +141,7 @@
 									<img alt="github" src="img/oct/mark-github.svg" width="48" height="48"/>
 								</a>
 							</div>
-							<div class="project loading" id="meme" data-langs="php mysql js">
-								<a class="poster" href="https://meme.yiays.com/" target="_blank">
-									<span>meme</span>
-									<p>
-										<img alt="database" src="img/oct/database.svg" width="16" height="16"><img alt="desktop" src="img/oct/device-desktop.svg" width="16" height="16"><img alt="mobile" src="img/oct/device-mobile.svg" width="16" height="16"><img alt="discord" src="img/discord.svg" width="16" height="16"><br>
-										A massive database of memes with crowd-sourced metadata, making for one of the best places to search for memes by describing them!
-									</p>
-									<h3>Meme<span style="color:#f9ca24;">DB</span></h3>
-								</a>
-								<a class="github" href="https://github.com/TeamMemeDB/" target="_blank" title="View on GitHub">
-									<img alt="github" src="img/oct/mark-github.svg" width="48" height="48"/>
-								</a>
-							</div>
-							<div class="project loading" id="merely" data-langs="py mysql js">
-								<a class="poster" href="https://merely.yiays.com/" target="_blank">
-									<span>m/</span>
-									<p>
-										<img alt="discord" src="img/discord.svg" width="16" height="16"><img alt="desktop" src="img/oct/device-desktop.svg" width="16" height="16"><img alt="mobile" src="img/oct/device-mobile.svg" width="16" height="16"><br>
-										a generally helpful discord bot with google search, image search, memes from MemeDB and a website!
-									</p>
-									<h3>merely</h3>
-								</a>
-								<a class="github" href="https://github.com/yiays/merely" target="_blank" title="View on GitHub">
-									<img alt="github" src="img/oct/mark-github.svg" width="48" height="48"/>
-								</a>
-							</div>
-							<div class="project loading" id="kahoot" data-langs="py js cs">
+							<!--<div class="project loading" id="kahoot" data-langs="py js cs">
 								<a class="poster" href="https://github.com/yiays/noncopyrightedinternetquizgamename" target="_blank">
 									<span>k!</span>
 									<p>
@@ -141,7 +154,7 @@
 								<a class="github" href="https://github.com/yiays/noncopyrightedinternetquizgamename" target="_blank" title="View on GitHub">
 									<img alt="github" src="img/oct/mark-github.svg" width="48" height="48"/>
 								</a>
-							</div>
+							</div>-->
 							<div class="project loading" id="dino" data-langs="cs mysql php">
 								<a class="poster" href="https://github.com/yiays/dino/releases" target="_blank">
 									<span>dino</span>
@@ -168,24 +181,8 @@
 									<img alt="github" src="img/oct/mark-github.svg" width="48" height="48"/>
 								</a>
 							</div>
-							<div class="project loading" id="signage" data-langs="js mysql">
-								<a class="poster" href="https://signage.yiays.com/" target="_blank">
-									<span>signs</span>
-									<p>
-										<img alt="desktop" src="img/oct/device-desktop.svg" width="16" height="16"><br>
-										Dynamicly updating content as signage designed for a tablet. One of my first projects written in React. Considerations were taken to prevent screen burn in.
-									</p>
-									<h3>Signage</h3>
-								</a>
-								<a class="github" href="https://github.com/yiays/signage" target="_blank" title="View on GitHub">
-									<img alt="github" src="img/oct/mark-github.svg" width="48" height="48"/>
-								</a>
-							</div>
 							<!--
-								Nyes https://yiays.000webhostapp.com/
-								fnafb-in-gm https://github.com/yesiateyoursheep/fnafb-in-gm
-								ConfessionBot
-								TF2D
+								WebFileManager
 							-->
 							<div class="project loading" id="blog" data-langs="php mysql js">
 								<a class="poster" href="https://blog.yiays.com/" target="_blank">
