Published the beta officially

--- a/old.html
+++ b/old.html
@@ -36,14 +36,14 @@
 				height: 1em;
 				top: 0.1em;
 				margin-right: 0.2em;
-				background: rgb(163,73,164);
+        background: rgb(112,146,190);
 				border-radius: 1em;
 				transition: background 0.25s ease;
 			}
 			.beta-toggle > .beta-slider::before {
 				content: '';
 				position: absolute;
-				left: 0.1em;
+				left: 0.9em;
 				top: 0.1em;
 				display: inline-block;
 				width: 0.8em;
@@ -65,9 +65,9 @@
 			<div class="gradient-2"></div>
 		</div>
 		<div class="main">
-			<a class="beta-toggle" href="/?beta=1">
+			<a class="beta-toggle" href="/?old=0">
 				<span class="beta-slider"></span>
-				Beta
+				Legacy
 			</a>
 			<div class="floaty">
 				<span class="floaty-hint">Click on the image to continue...</span>
