Rename css files to match current state

--- a/old.html
+++ b/old.html
@@ -15,7 +15,7 @@
 		<meta name="theme-color" content="#7295cd">
 		
 		<link rel="stylesheet" href="normalize.css">
-		<link rel="stylesheet" href="style.css?v=5">
+		<link rel="stylesheet" href="style.legacy.css?v=5">
 
 		<style>
 			.beta-toggle {
